Accessed model correctly, modified CSS so that map is visible

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
-html, body {
-  height: 100%;
-}
-
-#map {
+html, body, #container, #map {
   height: 100%;
 }
